# SparkGuard-Agent

./: README.md  pyproject.toml
examples/: bad_config.conf  bad_config.json  bad_config.yaml  submit_job.ps1
sparkguard/: __init__.py  agent.py  cli.py  diff.py  engine.py  fixer.py  formats.py  generator.py  linter.py  mcp_server.py  models.py  parser.py  rules.py  utils.py  verify.py
sparkguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_diff.py  test_fixer.py  test_formats.py  test_generator.py  test_integration.py  test_mcp_server.py  test_new_rules.py  test_parser.py  test_rules.py  test_verify.py
